# esp_irc_client

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  irc_client_main.c  irc_client_v4.c  tcp_client_v4.c
